# LDSO

./: .gitignore  CMakeLists.txt
cmake/: FindDBoW3.cmake
examples/: CMakeLists.txt  DatasetReader.h  run_dso_euroc.cc  run_dso_kitti.cc  run_dso_tum_mono.cc
include/: Frame.h  NumTypes.h  Point.h  Settings.h
include/Win32/: time.h
include/frontend/: CoarseInitializer.h  CoarseTracker.h  DSOViewer.h  FullSystem.h  LoopClosing.h  OutputWrapper.h  PixelSelector2.h
include/inertial/: ImuData.h  InertialCoarseTrackerHessian.h  InertialFrameFrameHessian.h  InertialFrameHessian.h  InertialHessian.h  InertialUtility.h  PreIntegration.h
include/internal/: FrameHessian.h  IndexThreadReduce.h  PR.h  Residuals.h
include/internal/OptimizationBackend/: EnergyFunctional.h
include/util/: MatrixInverter.h
src/: CMakeLists.txt  Frame.cc  Map.cc  Setting.cc
src/Win32/: times.cpp
src/frontend/: CoarseInitializer.cc  CoarseTracker.cc  DSOViewer.cc  FullSystem.cc  LoopClosing.cc  PixelSelector2.cc  Undistort.cc
src/inertial/: InertialCoarseTrackerHessian.cc  InertialFrameFrameHessian.cc  InertialFrameHessian.cc  InertialHessian.cc  PreIntegration.cc
src/internal/: FrameHessian.cc  GlobalCalib.cc  ImmaturePoint.cc  Residuals.cc
src/internal/OptimizationBackend/: EnergyFunctional.cc
src/util/: MatrixInverter.cc
